* Get line numbers right in errors relating to VCF files.
* Support bgzipped files via a tweak to boost (see boost TRAC ticket #6994 and #5904).
* Make -sort use temporary files in the same directory as the target (rather than a system directory.) This should improve its use on compute clusters.
* Support use of -sort with output .vcf files.

** Version 1.1, released April 2012 **

New features:

* QCTOOL now has initial support for VCF files.
* New/renamed options for selection of SNPs: -[in|ex]clude-range, -[in|ex]cl-rsids, -[in|ex]cl-snpids, -[in|ex]cl-snps-matching.
	These replace -snp-excl-list, -snp-interval, and -snpid-filter.
	These are AND'd together to form the SNP filter, with the exception that repeated invocations of each -incl-X option are first
	combined.  Thus the command qctool -g example.gen -incl-range 06:25000000-40000000 11:0-10000000 -excl-rsids my_snps.txt
	will include all SNPs in either region that are not in the exclusion list.
* SNP filters which filter on SNP id fields (-[in|ex]clude-range, -[in|ex]cl-rsids, -[in|ex]cl-snpids, -[in|ex]cl-snps-matching)
    are now applied before the main qctool processing pipeline.  The practical consequence is that SNP exclusion lists written using
    -write-snp-excl-list do not contain the SNPs in any exclusion lists passed in.
* New option -condition-on, similar to SNPTEST's -condition_on, adds genotypic dosages to the output sample file.
* New -quantile-normalise option: quantile-normalisation of columns in the sample file.
* New -assume-chromosome option.  If this is used, QCTOOL will fill in missing chromosome values with the given one.
* New: support for multiple cohorts (by specifying -g and/or -s several times.)  SNPs are matched between cohorts using the fields
  specified by -snp-match-fields (which must include position).  If cohorts have the same alleles but they may be coded in opposite ways